
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_5__ TYPE_2__ ;
typedef struct TYPE_4__ TYPE_1__ ;


typedef scalar_t__ u_short ;
struct sk_buff {unsigned int len; int* data; } ;
struct TYPE_4__ {unsigned int tx_bytes; } ;
struct net_device {unsigned int base_addr; TYPE_1__ stats; int trans_start; int name; } ;
typedef int netdev_tx_t ;
struct TYPE_5__ {scalar_t__ mohawk; } ;
typedef TYPE_2__ local_info_t ;


 int DEBUG (int,char*,struct sk_buff*,...) ;
 unsigned int ETH_ZLEN ;
 int EnableIntr ;
 unsigned int GetWord (int ) ;
 int NETDEV_TX_BUSY ;
 int NETDEV_TX_OK ;
 int PutByte (scalar_t__,int) ;
 int PutWord (scalar_t__,scalar_t__) ;
 int SelectPage (int ) ;
 int TransmitPacket ;
 scalar_t__ XIRCREG0_TRS ;
 int XIRCREG0_TSO ;
 scalar_t__ XIRCREG_CR ;
 scalar_t__ XIRCREG_EDP ;
 int dev_kfree_skb (struct sk_buff*) ;
 int jiffies ;
 TYPE_2__* netdev_priv (struct net_device*) ;
 int netif_start_queue (struct net_device*) ;
 int netif_stop_queue (struct net_device*) ;
 int outsw (scalar_t__,int*,unsigned int) ;
 scalar_t__ skb_padto (struct sk_buff*,unsigned int) ;

__attribute__((used)) static netdev_tx_t
do_start_xmit(struct sk_buff *skb, struct net_device *dev)
{
    local_info_t *lp = netdev_priv(dev);
    unsigned int ioaddr = dev->base_addr;
    int okay;
    unsigned freespace;
    unsigned pktlen = skb->len;

    DEBUG(1, "do_start_xmit(skb=%p, dev=%p) len=%u\n",
   skb, dev, pktlen);
    if (pktlen < ETH_ZLEN)
    {
        if (skb_padto(skb, ETH_ZLEN))
         return NETDEV_TX_OK;
 pktlen = ETH_ZLEN;
    }

    netif_stop_queue(dev);
    SelectPage(0);
    PutWord(XIRCREG0_TRS, (u_short)pktlen+2);
    freespace = GetWord(XIRCREG0_TSO);
    okay = freespace & 0x8000;
    freespace &= 0x7fff;

    okay = pktlen +2 < freespace;
    DEBUG(2 + (okay ? 2 : 0), "%s: avail. tx space=%u%s\n",
   dev->name, freespace, okay ? " (okay)":" (not enough)");
    if (!okay) {
 return NETDEV_TX_BUSY;
    }

    PutWord(XIRCREG_EDP, (u_short)pktlen);
    outsw(ioaddr+XIRCREG_EDP, skb->data, pktlen>>1);
    if (pktlen & 1)
 PutByte(XIRCREG_EDP, skb->data[pktlen-1]);

    if (lp->mohawk)
 PutByte(XIRCREG_CR, TransmitPacket|EnableIntr);

    dev_kfree_skb (skb);
    dev->trans_start = jiffies;
    dev->stats.tx_bytes += pktlen;
    netif_start_queue(dev);
    return NETDEV_TX_OK;
}
